[gd_scene load_steps=4 format=3 uid="uid://cp041l1vlfp3s"]

[ext_resource type="Script" uid="uid://blu5bvmyt4ug0" path="res://scenes/obstacle/obstacle.gd" id="1_phb0t"]
[ext_resource type="Texture2D" uid="uid://cc6xitxr4xatr" path="res://assets/pipedown.png" id="1_utmkd"]
[ext_resource type="Texture2D" uid="uid://cq5xtrbmp2ftb" path="res://assets/pipe.png" id="2_qlgnj"]

[node name="Obstacle" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_phb0t")

[node name="Top" type="Area2D" parent="."]
position = Vector2(0, -250)

[node name="Sprite2D" type="Sprite2D" parent="Top"]
texture = ExtResource("1_utmkd")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Top"]
polygon = PackedVector2Array(-37.5, 111.5, 37.5, 112, 37.5, 86, 28.5, 85.5, 29, -120.5, -28.5, -120.5, -29.5, 83.5, -39, 85)

[node name="Bottom" type="Area2D" parent="."]
position = Vector2(0, 115)

[node name="Sprite2D" type="Sprite2D" parent="Bottom"]
texture = ExtResource("2_qlgnj")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bottom"]
polygon = PackedVector2Array(-28.5, 117.5, -28, -85.5, -37, -85.5, -36.5, -111.5, 37, -112.5, 36.5, -87, 30.5, -87.5, 31, 119)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(98.5, -82.5)
rect = Rect2(-10, -40, 20, 80)

[connection signal="body_entered" from="Top" to="." method="_on_top_body_entered"]
[connection signal="body_entered" from="Bottom" to="." method="_on_bottom_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
